# git-branch-Visualizer

./: .gitignore  LICENSE  README.md  SPEC.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-10-commit-diff.md
docs/superpowers/specs/: 2026-07-09-worktrees-design.md  2026-07-10-commit-diff-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  open.rs  platform.rs  state.rs  watcher.rs
src/components/: BranchPane.tsx  CommitGraph.tsx  ContextMenu.tsx  Header.tsx  SettingsView.tsx  Toast.tsx  WorktreePane.tsx
src/lib/: graph.check.ts  graph.ts  ipc.ts  relTime.ts
