[package]
name = "branch-visualizer"
version = "0.1.0"
description = "A menu bar git branch visualizer"
authors = ["Branch Visualizer"]
edition = "2021"

# The library the desktop binary (and future mobile targets) link against.
[lib]
name = "branch_visualizer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.2.0"
tauri-plugin-dialog = "2.7.1"
